Replace DoseLimit::vec_from_string with impl FromStr for DoseLimit
This wraps Vec<DoseLimit> in a DoseLimits newtype, and cleans up some of
the calling code around it.
